borsh-derive/src/internals/attributes/field/snapshots/bounds_parsing_error2.snap
---
source: borsh-derive/src/internals/attributes/field/mod.rs
expression: err
---
Error(
    "expected `:`",
)
