borsh-derive/src/internals/attributes/field/snapshots/bounds_parsing_error3.snap
---
source: borsh-derive/src/internals/attributes/field/mod.rs
expression: err
---
Error(
    "expected borsh bound attribute to be a string: `deserialize = \"...\"`",
)
