borsh-derive/src/internals/attributes/field/snapshots/merge_multiple_borsh_attrs-2.snap
---
source: borsh-derive/src/internals/attributes/field/mod.rs
expression: debug_print_tokenizable(attrs.deserialize_with)
---
third_party_impl :: deserialize_third_party
