borsh-derive/src/internals/attributes/field/snapshots/merge_multiple_borsh_attrs.snap
---
source: borsh-derive/src/internals/attributes/field/mod.rs
expression: debug_print_tokenizable(attrs.serialize_with.as_ref())
---
third_party_impl :: serialize_third_party
