borsh-derive/src/internals/attributes/field/snapshots/reject_duplicate_key_across_borsh_attrs.snap
---
source: borsh-derive/src/internals/attributes/field/mod.rs
expression: err
---
Error(
    "duplicate `serialize_with` attribute",
)
