borsh-derive/src/internals/attributes/field/snapshots/reject_multiple_borsh_attrs.snap
---
source: borsh-derive/src/internals/attributes/field/mod.rs
expression: err
---
Error(
    "multiple `borsh` attributes not allowed",
)
