borsh-derive/src/internals/attributes/field/snapshots/root_bounds_and_params_combined-2.snap
---
source: borsh-derive/src/internals/attributes/field/mod.rs
expression: debug_print_vec_of_tokenizable(schema.params.clone())
---
T => < T as TraitName > :: Associated
V => Vec < V >

