borsh-derive/src/internals/attributes/field/snapshots/root_bounds_and_params_combined-3.snap
---
source: borsh-derive/src/internals/attributes/field/mod.rs
expression: debug_print_tokenizable(attrs.serialize_with)
---
third_party_impl :: serialize_third_party

