borsh-derive/src/internals/attributes/field/snapshots/root_bounds_and_params_combined.snap
---
source: borsh-derive/src/internals/attributes/field/mod.rs
expression: debug_print_vec_of_tokenizable(bounds.deserialize)
---
K : Hash

